<resources>
    <string name="app_name">M.L.P.</string>
    <string name="app_name_full">Mock Location Provider</string>
    <string name="package_name">labs.lucka.mlp</string>
    <string name="data_filename">mlp_target.json</string>
    <string name="test_location_provider">mlp_test</string>

    <!-- Main Menu -->
    <string name="menu_main_import">Import</string>
    <string name="menu_main_export">Export</string>
    <string name="menu_main_clear">Clear</string>
    <string name="menu_main_preference">Preference</string>
    <string name="menu_main_about">About</string>

    <!-- Dialog -->
    <string name="alert_title">Alert</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <!-- Add / edit mock target dialog -->
    <string name="add_mock_target_title">Add Mock Target</string>
    <string name="edit_mock_target_title">Edit Mock Target</string>
    <string name="tab_basic_title">Basic</string>
    <string name="tab_advanced_title">Advanced</string>
    <string name="longitude_title">Longitude</string>
    <string name="latitude_title">Latitude</string>
    <string name="title_title">Title</string>
    <string name="altitude_title">Altitude (m)</string>
    <string name="accuracy_title">Accuracy (m)</string>
    <string name="accuracy_default">5.0</string>
    <string name="interval_title">Interval (ms)</string>
    <string name="interval_default">5000</string>
    <string name="add_mock_target_success">Success.</string>
    <!-- Remove mock target -->
    <string name="remove_mock_target_confirm_title">Remove</string>
    <string name="remove_mock_target_confirm_message">Title: %s\nLongitude: %s\nLatitude: %s</string>
    <string name="clear_mock_target_confirm_title">Remove All</string>
    <string name="clear_mock_target_confirm_message">Confirm to remove all mock targets.</string>
    <string name="undo">Undo</string>
    <string name="target_removed">Target removed.</string>
    <string name="targets_cleared">Target(s) cleared.</string>
    <!-- Developer options dialog -->
    <string name="mock_location_option_title">Developer Options</string>
    <string name="mock_location_option_text">To provide mock location, you must turn on the Enable mock location option in the Developer Options, and select MLP in the Select mock location app option if the option exists.</string>
    <!-- Import / export dialog -->
    <string name="import_title">Import from</string>
    <string name="export_title">Export As</string>
    <string name="ie_gpx">GPX file</string>
    <string name="ie_gpx_mime">*/*</string>
    <string name="ie_json">JSON file</string>
    <string name="ie_json_mime">*/*</string>
    <string name="import_success">Imported %d target(s).</string>
    <string name="import_empty">Imported nothing.</string>
    <string name="import_failed">Imported failed.\n%s</string>
    <string name="export_success">Exported %d targets(s).</string>

    <!-- Main recycler view -->
    <string name="example_coordinate">000:00:00.00000</string>
    <string name="target_title_default">(Target %d)</string>
    <string name="coordinate_text">(%s, %s)</string>
    <string name="altitude_text">%.1f m</string>
    <string name="accuracy_text">%.1f m</string>
    <string name="interval_text">%.3f s</string>

    <!-- Service -->
    <string name="pref_is_service_online_key">pref_is_service_online</string>
    <string name="service_description">M.L.P. Service</string>
    <string name="service_notification_channel_description">M.L.P. Service Notification</string>
    <string name="service_notification_text">M.L.P. Service is running</string>
    <string name="service_current_target_description">Current Mock Target: %s</string>
    <string name="service_caught_error_title">Error</string>
    <string name="service_caught_error_text_default">M.L.P. Service encountered an error.\nMaybe you did\'t turn on the Allow Mock Location in Developer Options</string>
</resources>
