<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="labs.lucka.mlp.MainActivity">
    <item
        android:id="@+id/menu_main_import"
        android:orderInCategory="301"
        android:title="@string/menu_main_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_main_export"
        android:orderInCategory="302"
        android:title="@string/menu_main_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_main_clear"
        android:orderInCategory="401"
        android:title="@string/menu_main_clear"
        android:icon="@drawable/ic_clear"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_main_preference"
        android:orderInCategory="901"
        android:title="@string/menu_main_preference"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_main_about"
        android:orderInCategory="902"
        android:title="@string/menu_main_about"
        app:showAsAction="never" />
</menu>
