<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/tab_basic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="@string/tab_basic_title">

                    <TextView
                        android:id="@+id/longitudeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:labelFor="@id/longitudeEdit"
                        android:text="@string/longitude_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/longitudeEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="numberSigned|numberDecimal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/longitudeTitle">

                        <requestFocus />
                    </EditText>

                    <TextView
                        android:id="@+id/latitudeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:labelFor="@id/latitudeEdit"
                        android:text="@string/latitude_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/longitudeEdit" />

                    <EditText
                        android:id="@+id/latitudeEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="numberSigned|numberDecimal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/latitudeTitle" />

                    <TextView
                        android:id="@+id/titleTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:labelFor="@+id/titleEdit"
                        android:text="@string/title_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/latitudeEdit" />

                    <EditText
                        android:id="@+id/titleEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="textAutoComplete"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleTitle" />

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/tab_advanced"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/altitudeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:labelFor="@id/altitudeEdit"
                        android:text="@string/altitude_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/altitudeEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/altitudeTitle">

                        <requestFocus />
                    </EditText>

                    <TextView
                        android:id="@+id/accuracyTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:labelFor="@id/accuracyEdit"
                        android:text="@string/accuracy_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/altitudeEdit" />

                    <EditText
                        android:id="@+id/accuracyEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:text="@string/accuracy_default"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/accuracyTitle" />

                    <TextView
                        android:id="@+id/intervalTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:labelFor="@id/intervalEdit"
                        android:text="@string/interval_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/accuracyEdit" />

                    <EditText
                        android:id="@+id/intervalEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="number"
                        android:text="@string/interval_default"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/intervalTitle" />

                </android.support.constraint.ConstraintLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>